src/snapshots/sel__tests__parsing-40.snap
---
source: src/tests.rs
expression: "t(b\"\ndef a:: [b 2],\ndef b:: [add 1],\na\n\")"
---
Ok(
    (
        Number,
        Tree {
            loc: Location(
                0,
                33..34,
            ),
            ty: 0,
            value: Apply(
                Name(
                    "a",
                ),
                [],
            ),
        },
    ),
)
