src/snapshots/sel__tests__parsing-42.snap
---
source: src/tests.rs
expression: "t(b\"\ndef mre :: # a -> returnof(mre)\n    [ let a\n        [mre a] ],\nmre\n\")"
---
Ok(
    (
        Func(
            Named(
                "paramof(mre)=a",
            ),
            Named(
                "returnof(mre)",
            ),
        ),
        Tree {
            loc: Location(
                0,
                64..67,
            ),
            ty: 11,
            value: Apply(
                Name(
                    "mre",
                ),
                [],
            ),
        },
    ),
)
