src/snapshots/sel__tests__parsing-5.snap
---
source: src/tests.rs
expression: "t(b\"[tonum, add234121, tostr] :13242:\")"
---
Ok(
    (
        Bytes(
            true,
        ),
        Tree {
            loc: Location(
                0,
                19..33,
            ),
            ty: 1,
            value: Apply(
                Name(
                    "tostr",
                ),
                [
                    Tree {
                        loc: Location(
                            0,
                            8..17,
                        ),
                        ty: 0,
                        value: Apply(
                            Name(
                                "add",
                            ),
                            [
                                Tree {
                                    loc: Location(
                                        0,
                                        11..17,
                                    ),
                                    ty: 0,
                                    value: Number(
                                        234121.0,
                                    ),
                                },
                                Tree {
                                    loc: Location(
                                        0,
                                        1..6,
                                    ),
                                    ty: 0,
                                    value: Apply(
                                        Name(
                                            "tonum",
                                        ),
                                        [
                                            Tree {
                                                loc: Location(
                                                    0,
                                                    26..33,
                                                ),
                                                ty: 1,
                                                value: Bytes(
                                                    [
                                                        49,
                                                        51,
                                                        50,
                                                        52,
                                                        50,
                                                    ],
                                                ),
                                            },
                                        ],
                                    ),
                                },
                            ],
                        ),
                    },
                ],
            ),
        },
    ),
)
