src/snapshots/sel__tests__parsing-6.snap
---
source: src/tests.rs
expression: "t(b\"{repeat 1, {}}\")"
---
Ok(
    (
        List(
            true,
            List(
                false,
                Number,
            ),
        ),
        Tree {
            loc: Location(
                0,
                0..14,
            ),
            ty: 10,
            value: List(
                [
                    Tree {
                        loc: Location(
                            0,
                            1..9,
                        ),
                        ty: 6,
                        value: Apply(
                            Name(
                                "repeat",
                            ),
                            [
                                Tree {
                                    loc: Location(
                                        0,
                                        8..9,
                                    ),
                                    ty: 0,
                                    value: Number(
                                        1.0,
                                    ),
                                },
                            ],
                        ),
                    },
                    Tree {
                        loc: Location(
                            0,
                            11..13,
                        ),
                        ty: 9,
                        value: List(
                            [],
                        ),
                    },
                ],
            ),
        },
    ),
)
